assertEquals -> assertSame